# nano-finbert

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
data/: financial_phrasebank.json
data/samples/: financial_phrases.json
scripts/: infer.py  train.py
src/finbert/: __init__.py  dataset.py  model.py  signals.py  tokenizer.py  train.py
src/finbert/api/: __init__.py  server.py
tests/: conftest.py  test_api.py  test_api_extra.py  test_dataset.py  test_model.py  test_model_extra.py  test_signals.py  test_signals_extra.py  test_tokenizer.py  test_tokenizer_extra.py  test_train.py
