[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-finbert"
version = "0.1.0"
description = "Educational tiny transformer for financial signal extraction — trained from scratch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nano-finbert contributors" }]
keywords = ["finance", "nlp", "transformer", "pytorch", "sentiment", "signals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "httpx2>=0.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.8",
]

[project.scripts]
nano-finbert-serve = "finbert.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finbert"]

[tool.hatch.build.targets.sdist]
include = ["src/", "data/", "tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501", "B008", "N812", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
